# Noise-Visualizer

./: CMakeLists.txt  README.md  bindings.cpp  noise_engine.hpp  requirements.txt  server.py  setup.py
static/: app.js  index.html  style.css
